Change title of event detail activity.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="title_activity_main">ChickTech Connect</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
-    <string name="title_activity_event_detail">EventDetailActivity</string>
+    <string name="title_activity_event_detail">Event</string>
     <string name="action_rsvp">RSVP</string>
     <string name="action_settings">Settings</string>
     
