Start to create ability to create a new event from the mobile app. Change my mind and stop that path of development. Maybe later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="clock_icon">Clock Icon</string>
     <string name="location_icon">Location Icon</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_new_event">New Event</string>
 
 </resources>
