--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="location_icon">Location Icon</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_new_event">New Event</string>
+    <string name="title_activity_login">Welcome To ChickTech</string>
 
 </resources>
