Add automatic Login and logout menu option
- Refactor the LoginActivity to automatically log in if the phone number is in SharedPreferences.
- Move some code out into LoginUtils class.
- Add options menu on PeopleFragment for Logout. Logout logs the user out of Parse, clears the SharedPrefrences "phoneNumber" key, and starts the LoginActivity while killing the current activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="title_activity_event_detail">Event</string>
     <string name="action_rsvp">RSVP</string>
+    <string name="action_logout">Logout</string>
     <string name="action_goto_map">Map</string>
     <string name="event_name_label">Event Name</string>
     <string name="rsvp_not">You have not RSVPd</string>
