--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="calendar_icon">Calendar Icon</string>
     <string name="clock_icon">Clock Icon</string>
     <string name="location_icon">Location Icon</string>
+    <string name="rsvp_icon">RSVP Icon</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_new_event">New Event</string>
     <string name="title_activity_login">ChickTech</string>
