Reformat look of main list of events

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="action_rsvp">RSVP</string>
     <string name="action_logout">Logout</string>
     <string name="action_goto_map">Map</string>
-    <string name="event_name_label"></string>
+    <string name="event_name_label">Event Name</string>
     <string name="rsvp_not">You have not RSVPd</string>
     <string name="rsvp_yes">You have RSVPd YES</string>
     <string name="rsvp_NO">You have RSVPd NO</string>
